--- a/loading.html
+++ b/loading.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <svg>
-       <path d="M20,20 L200,200" stroke="#333"></path>
+       <!-- <path d="M20,20 L200,200" stroke="#333"></path> -->
        <path class="ant-progress-circle-trail" d="M 50,50 m 0,-47
            a 47,47 0 1 1 0,94
            a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" style="stroke-dasharray: 295.31px, 295.31px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray 0.3s ease 0s, stroke 0.3s;"></path>
