--- a/loading.html
+++ b/loading.html
@@ -19,8 +19,12 @@
             stroke-width="6" fill-opacity="0" 
             style="stroke-dasharray: 273.482px, 320.31px;stroke-dashoffset: 0px;transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray 0.3s ease 0s, stroke 0.3s, stroke-width 0.06s ease 0.3s;"></path>
     </svg>
+    <script type="text/javascript" src="snap.svg.js"></script>
     <script type="text/javascript">
-      
+       var path = Snap('.ant-progress-circle-path')
+       path.animate({ strokeDasharray:'295.31px, 295.31px'},2000, mina.linear,function(){
+
+       })
     </script>
 </body>
 </html>
