--- a/SVG/basic.html
+++ b/SVG/basic.html
@@ -20,9 +20,10 @@
 <body>
     <svg >
         <g>
-            <!-- <path d="M50,50 L100,100 L50,100 Z"></path>  -->
-            <path d="M50,50 L200,200" stroke-dasharray="50" ></path>
-            <path d="M50,150 L200,300" stroke-dasharray="50" stroke-dashoffset="30"></path>
+            <path d="M50,50 L100,100 L50,100"></path>
+            <!-- <path d="M50,50 L100,100 L50,100"></path>  -->
+            <!-- <path d="M50,50 L200,200" stroke-dasharray="50" ></path>
+            <path d="M50,150 L200,300" stroke-dasharray="50" stroke-dashoffset="30"></path> -->
         </g>
        
     </svg>
