--- a/D3/pieChart2C.html
+++ b/D3/pieChart2C.html
@@ -2,55 +2,46 @@
 <meta charset="utf-8">
 <title>Pie Chart</title>
 <body>
-<!-- <script src="//d3js.org/d3.v3.min.js"></script> -->
-<script src="./d3.js"></script>
+<script src="https://d3js.org/d3.v5.js"></script>
+<!-- <script src="./d3.js"></script> -->
 <script>
 
 var width = 960,
     height = 500,
     radius = Math.min(width, height) / 2 - 10;
 
-var data = d3.range(10).map(Math.random).sort(d3.descending);
+var data = d3.range(10).map(Math.random).sort(d3.descending); //生成0-9的数组 生成0-1随机数 排序
 
-var colorArr = [];
- // 随机生成颜色
- for (let i = 0; i <= 20; i++) {
-                let colornums = "0123456789abcdef";
-                let color = '#';
-                for (let j = 0 ; j < 6; j++){
-                    let randomNum = parseInt(Math.random()*15);
-                    let colorNum = colornums.slice(randomNum,randomNum+1);
-                    color += colorNum;
-                }
-                colorArr.push(color)
-            }
 
-var arc = d3.arc()
+var arc = d3.arc() // 创建弧线生成器
     .outerRadius(radius);
 
 var pie = d3.pie();
 
 var svg = d3.select("body").append("svg")
-    .datum(data)
+    //.datum(data) //绑定数据
     .attr("width", width)
     .attr("height", height)
-  .append("g")
+    .append("g")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
 var arcs = svg.selectAll("g.arc")
-    .data(pie)
-  .enter().append("g")
+    .data(pie(data)) //绑定数据(转换数据)
+    .enter().append("g")
     .attr("class", "arc");
 
 arcs.append("path")
     .attr("fill", function(d, i) { return colorArrFun(d,i); })
-  .transition()
+    .transition()
     .ease(d3.easeBounce)
+    // .ease(function(t,b,c,d){
+    //    return t*t*t
+    // })
     .duration(2000)
     .attrTween("d", tweenPie)
-  .transition()
+    .transition()
     .ease(d3.easeElastic)
-    .delay(function(d, i) { return 2000 + i * 50; })
+    .delay(function(d, i) { return 500 + i * 50; })
     .duration(750)
     .attrTween("d", tweenDonut);
 
