--- a/SVG/basic.html
+++ b/SVG/basic.html
@@ -7,8 +7,8 @@
     <title>SVG学习</title>
     <style type="text/css">
     html,body,div,svg,path{
-      margin:0;
-      padding:0;
+      /* margin:0; */
+      /* padding:0; */
       stroke:#333;
       fill:red;
     }  
@@ -18,14 +18,40 @@
     </style>
 </head>
 <body>
-    <svg >
-        <g>
-            <path d="M50,50 L100,100 L50,100"></path>
-            <!-- <path d="M50,50 L100,100 L50,100"></path>  -->
-            <!-- <path d="M50,50 L200,200" stroke-dasharray="50" ></path>
-            <path d="M50,150 L200,300" stroke-dasharray="50" stroke-dashoffset="30"></path> -->
-        </g>
-       
-    </svg>
+    <div>
+        <h3>rect</h3>
+        <svg>
+            <rect x="20" y="20" width="200" height="100" style="fill:steelblue;stroke:blue;stroke-width:4;opactity:0.5"/> 
+        </svg>
+        <svg>
+            <rect x="20" y="20" rx="30" ry="50" width="200" height="100" style="fill:red;stroke:black;stroke-width:3;opacity: 0.5;"></rect>
+        </svg>
+    </div>
+    <div>
+        <h3>circle</h3>
+        <svg>
+            <circle cx="150" cy="150" r="80" style="fill:yellow;stroke:black;stroke-width:2"/>
+        </svg>
+    </div>
+    <div>
+        <h3>ellipse</h3>
+        <svg>
+            <ellipse cx="250" cy="150" rx="200" ry="100" style="fill:green;stroke:blue;stroke-width:1"/>
+        </svg>
+    </div>
+    <div>
+        <h3>polygon</h3>
+        <svg>
+            <polygon points="100,30, 20,80 60,160 140,160 180,90" style="fill:LawnGreen;stroke:black;stroke-width:1" />
+        </svg>
+    </div>
+    <div>
+        <h3>path</h3>
+        <svg>
+            <path d="M30,50 L200,200" style="stroke:black;stroke-width:1"/>
+            <path d="M30,50 H200" style="stroke:red;stroke-width:1"/>
+            <path d="M30,50 V200" style="stroke:blue;stroke-width:1"/>
+        </svg>
+    </div>
 </body>
 </html>
