--- a/SVG/preserveAspectRatio.html
+++ b/SVG/preserveAspectRatio.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <svg id="svg" width="400" height="200" viewBox="0 0 200 200" preserveAspectRatio="xMinYMin meet" style="border:1px solid #cd0000;">
+    <svg id="svg" width="400" height="400" viewBox="0 0 200 100" preserveAspectRatio="xMinYMin meet" style="border:1px solid #cd0000;">
         <!-- <g id="parrot">
             <path fill="#68A284" d="M98.595 272.797c-41.144 0-77.262-28.608-97.898-71.725 3.832 44.6 25.214 98.16 98.218 98.16 72.024 0 94.49-54.748 98.282-99.631C176.686 243.541 140.206 272.797 98.595 272.797z"></path>
             <path fill="#5EEA99" d="M196.082 161.237c-20.703 42.64-56.618 70.872-97.487 70.872 -40.322 0-75.837-27.467-96.662-69.153C0.61 170.116 0 177.521 0 185.006c0 5.137 0.222 10.535 0.697 16.066 20.636 43.116 56.754 71.725 97.898 71.725 41.611 0 78.091-29.256 98.603-73.195 0.422-5.018 0.625-9.916 0.625-14.596C197.822 176.919 197.318 168.93 196.082 161.237z"></path>
@@ -38,7 +38,7 @@
         <select id="select0">
             <option value="meet" selected>meet</option>
             <option value="slice">slice</option>
-            <option value="slice">none</option>
+            <option value="none">none</option>
             <option value="no">不设置</option>
         </select>
     </p>
