--- a/SVG/basic.html
+++ b/SVG/basic.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SVG学习</title>
     <style type="text/css">
-    html,body,div,svg,path{
-      /* margin:0; */
-      /* padding:0; */
-      stroke:#333;
-      fill:red;
-    }  
-    svg{
-        overflow: visible;
-    }
+        html,
+        body,
+        div,
+        svg,
+        path {
+            /* margin:0; */
+            /* padding:0; */
+            stroke: #333;
+            fill: red;
+        }
+
+        svg {
+            overflow: visible;
+        }
     </style>
 </head>
+
 <body>
     <div>
         <h3>rect</h3>
         <svg>
-            <rect x="20" y="20" width="200" height="100" style="fill:steelblue;stroke:blue;stroke-width:4;opactity:0.5"/> 
+            <rect x="20" y="20" width="200" height="100" style="fill:steelblue;stroke:blue;stroke-width:4;opactity:0.5" />
         </svg>
         <svg>
             <rect x="20" y="20" rx="30" ry="50" width="200" height="100" style="fill:red;stroke:black;stroke-width:3;opacity: 0.5;"></rect>
@@ -30,13 +37,13 @@
     <div>
         <h3>circle</h3>
         <svg>
-            <circle cx="150" cy="150" r="80" style="fill:yellow;stroke:black;stroke-width:2"/>
+            <circle cx="150" cy="150" r="80" style="fill:yellow;stroke:black;stroke-width:2" />
         </svg>
     </div>
     <div>
         <h3>ellipse</h3>
         <svg>
-            <ellipse cx="250" cy="150" rx="200" ry="100" style="fill:green;stroke:blue;stroke-width:1"/>
+            <ellipse cx="250" cy="150" rx="200" ry="100" style="fill:green;stroke:blue;stroke-width:1" />
         </svg>
     </div>
     <div>
@@ -48,10 +55,37 @@
     <div>
         <h3>path</h3>
         <svg>
-            <path d="M30,50 L200,200" style="stroke:black;stroke-width:1"/>
-            <path d="M30,50 H200" style="stroke:red;stroke-width:1"/>
-            <path d="M30,50 V200" style="stroke:blue;stroke-width:1"/>
+            <path d="M30,50 L200,200" style="stroke:black;stroke-width:1" />
+            <path d="M30,50 H200" style="stroke:red;stroke-width:1" />
+            <path d="M30,50 V200" style="stroke:blue;stroke-width:1" />
         </svg>
     </div>
+    <div>
+        <h3>clippath</h3>
+        <svg height="500" width="800" style="clip-path:url(#clippath);">
+            <image xlink:href="https://www.w3cplus.com/sites/default/files/blogs/2014/1407/flowers.jpg" x="0" y="0" width="800" height="500"/>
+            <defs>
+                <clipPath id="clippath">
+                    <text x="0" y="350" textLength="800px" lengthAdjust="spacing" font-family="Vollkorn" font-size="230px" font-weight="700" font-style="italic" stroke="#000000"> Liubin </text>
+                </clipPath>
+            </defs>
+        </svg>
+        <svg height="500" width="800" style="clip-path:url(#theSVGPath);">
+                <image xlink:href="https://www.w3cplus.com/sites/default/files/blogs/2014/1407/flowers.jpg" x="0" y="0" width="800" height="500"/>
+                <defs>
+                    <clipPath id="theSVGPath">
+                        <rect x="0" y="0" stroke="#000000" stroke-miterlimit="10" width="108" height="500"/>
+                        <rect x="121.5" y="25.5" stroke="#000000" stroke-miterlimit="10" width="55" height="455"/>
+                        <rect x="192.5" y="9.5" stroke="#000000" stroke-miterlimit="10" width="60" height="484"/>
+                        <rect x="271.5" y="44.5" stroke="#000000" stroke-miterlimit="10" width="63" height="416"/>
+                        <rect x="349.5" y="25.5" stroke="#000000" stroke-miterlimit="10" width="208" height="447"/>
+                        <rect x="574.5" y="44.5" stroke="#000000" stroke-miterlimit="10" width="60" height="446"/>
+                        <rect x="644.5" y="9.5" stroke="#000000" stroke-miterlimit="10" width="68" height="471"/>
+                        <rect x="736.5" y="18.5" stroke="#000000" stroke-miterlimit="10" width="49" height="462"/>
+                    </clipPath>
+                </defs>
+            </svg>
+    </div>
 </body>
+
 </html>
