--- a/SVG/preserveAspectRatio.html
+++ b/SVG/preserveAspectRatio.html
@@ -67,7 +67,9 @@
                 select.onchange = function () {
                     if (select0.value === "no") {
                         svg.setAttribute("preserveAspectRatio", select1.value + select2.value);
-                    } else {
+                    } else if(select0.value === "none"){
+                        svg.setAttribute("preserveAspectRatio",select0.value);
+                    }else{
                         svg.setAttribute("preserveAspectRatio", select1.value + select2.value + " " +
                             select0.value);
                     }
