--- a/D3/study/stack-group-bar.html
+++ b/D3/study/stack-group-bar.html
@@ -34,7 +34,7 @@ var xz = d3.range(m),
     y01z = d3.stack().keys(d3.range(n))(d3.transpose(yz)),
     yMax = d3.max(yz, function(y) { return d3.max(y); }),
     y1Max = d3.max(y01z, function(y) { return d3.max(y, function(d) { return d[1]; }); });
-
+    debugger;
 var svg = d3.select("svg"),
     margin = {top: 40, right: 10, bottom: 20, left: 10},
     width = +svg.attr("width") - margin.left - margin.right,
