--- a/D3/work/stackbar.array.html
+++ b/D3/work/stackbar.array.html
@@ -3,6 +3,16 @@
     .axis .domain {
         display: none;
     }
+    svg{
+        position: relative;
+    }
+    .tooltip{
+        fill: #333;
+        stroke: #333;
+        border: 1px solid #333;
+        background:#333;
+        position: absolute;
+    }
 </style>
 <svg width="960" height="500"></svg>
 <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
@@ -30,8 +40,8 @@
     var z = d3.scaleOrdinal()
         .range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
     //生成数据    
-    var keys = ['A', 'B', 'C', 'D','E','F'];
-    var state = ['AB', 'BC', 'CD','DE','EF','FJ']
+    var keys = ['A', 'B', 'C', 'D', 'E', 'F'];
+    var state = ['AB', 'BC', 'CD', 'DE', 'EF', 'FJ']
     var dataset = state.map(function (d, i) {
         var data = {
             state: d
@@ -65,6 +75,9 @@
             return d;
         })
         .enter().append("rect")
+        .on('mouseover', showTip)
+        .on('mousemove', showTip)
+        .on('mouseout', hideTip)
         .attr("x", function (d) {
             return x(d.data.state);
         })
@@ -75,7 +88,8 @@
         .attr("height", function (d) {
             return y(d[0]) - y(d[1]);
         })
-        .attr("width", x.bandwidth());
+        .attr("width", x.bandwidth())
+
     g.append("g")
         .attr("class", "axis")
         .attr("transform", "translate(0," + height + ")")
@@ -117,4 +131,25 @@
         .text(function (d) {
             return d;
         });
+
+    //  tooltip
+    var tooltip = svg.append('div')
+        .attr('class', 'tooltip')
+        .style('display','none')
+    function showTip(d, i) {
+        var x = d3.event.pageX;
+        var y = d3.event.pageY;
+        tooltip
+        .style('display','block')
+            .transition().delay(100).duration(50).ease(d3.easeLinear)
+            // .attr('x', x)
+            // .attr('y', y)
+            .style('left',x)
+            .style('top',y)
+            .text(d.data.state + '--' + (d[1] - d[0]));
+    }
+
+    function hideTip() {
+        tooltip.style('display','none')
+    }
 </script>
