--- a/BFC/flex.html
+++ b/BFC/flex.html
@@ -1,12 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>flex布局</title>
+    <style type="text/css">
+        .flex {
+            display: flex;
+            width: 500px;
+            height: 200px;
+            border: 1px solid #333;
+        }
+
+        .flex .item {
+            border: 1px solid #333;
+            width:100px;
+            height:50px;
+        }
+        .flex .item:nth-child(2){
+            padding:20px;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="flex">
+        <div class="item">item111</div>
+        <div class="item">item222</div>
+        <div class="item">item333</div>
+        <div class="item">item444</div>
+    </div>
+    <div>
+        flex-direction
+        <select id="flexDirection">
+            <option value="row">row</option>
+            <option value="row-reverse">row-reverse</option>
+            <option value="column">column</option>
+            <option value="column-reverse">column-reverse</option>
+        </select>
+        flex-wrap
+        <select id="flexWrap">
+            <option value="nowrap">nowrap</option>
+            <option value="wrap">wrap</option>
+            <option value="wrap-reverse">wrap-reverse</option>
+        </select>
+    </div>
+    <div>
+        justify-content:
+        <select id="justifyContent">
+            <option value="flex-start">flex-start</option>
+            <option value="flex-end">flex-end</option>
+            <option value="center">center</option>
+            <option value="space-between">space-between</option>
+            <option value="space-around">space-around</option>
+        </select>
+        align-items
+        <select id="alignItems">
+                <option value="flex-start">flex-start</option>
+                <option value="flex-end">flex-end</option>
+                <option value="center">center</option>
+                <option value="baseline">baseline</option>
+                <option value="stretch">stretch</option>
+            </select>
+    </div>
+    <script type="text/javascript">
+        window.onload = function () {
+            change()
+        }
+
+        function change() {
+            var selects = document.querySelectorAll('select');
+            var flex = document.querySelector('.flex');
+            [].slice.call(selects).forEach(function (select) {
+                select.addEventListener('change', function () {
+                    var attr = this.getAttribute('id');
+                    flex.style[attr] = this.value
+                }, false)
+            })
+        }
+    </script>
 </body>
+
 </html>
