--- a/BFC/float.html
+++ b/BFC/float.html
@@ -16,6 +16,9 @@
         .container {
             border: 1px solid #333;
             width: 400px;
+            padding:20px;
+            margin: 20px;
+            position: relative;
         }
 
         .container:not(:first-child) {
